--- a/src/main/resources/templates/nuevo_actor.html
+++ b/src/main/resources/templates/nuevo_actor.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Nuevo Actor</h1>
-<form action="/actor" method="post">
+<form action="" method="post">
     <label for="nombre">Nombre:</label>
     <input type="text" id="nombre" name="first_name" required>
     <br>
